assets/sass/cds/_components.scss
// Video Controls
.video-banner--control-button {
  color: $white !important;
  font-size: 1.25rem;
  position: absolute;
  left: 0.5rem;
  bottom: 1rem;
  text-decoration: none !important;
  z-index: 1;

  @include desktop {
    bottom: 1.5rem;
    left: 1rem;
  }

  .pause-ico {
    border: $white 2px solid;
    border-radius: 50%;
    display: inline-block;
    margin-right: 0.4rem;
    padding: 0.75rem;

    @include desktop {
      margin-right: 0.75rem;
    }

    &.fa-play {
      padding: 0.75rem 0.8rem;
    }
  }
}

.font-color-white {
  color: $white;
}

.icon-text-list {
  margin-bottom: 3rem;
}

.button-center {
  text-align: center;
}

.button {
  position: relative;
  display: inline-block;
  font-weight: 400;
  padding: 1rem 6.5rem;
  border: $primary-color 2px solid;
  background: #333;
  transition: all 0.3s ease-in-out;
  color: $primary-color;
  margin: 2rem 0;
  font-size: 1.75rem;

  &:hover {
    border-color: $secondary-color;
    background: $secondary-color;
    color: $primary-color;
    border-radius: 0;
  }

  &.outline {
    background: none;
    color: $white;
    border-color: $white;

    &:hover {
      background: $primary-color;
      color: $secondary-color;
      border-color: $primary-color;
    }

    &.dark {
      color: $secondary-color !important;
      border-color: $secondary-color;

      &:hover {
        color: $primary-color !important;
        background: $secondary-color;
      }
    }
  }

  &.small {
    margin: 1rem 0;
    padding: 0.5rem;
    font-size: 1.2rem;
  }
}

.our-team--listing {
  max-width: 100% !important;
}

.contact-info {
  list-style: none;
  margin: 0;
  padding: 0;

  @include mobile_only {
    margin: 0 2rem;
  }

  li {
    margin: 2rem 0 2rem 2rem;
  }

  i {
    padding: 1.8rem;
    display: inline-block;
    color: $white;
    text-align: center;
    font-size: 2rem;
    transition: all 0.3s ease-in-out;
    border: $dark-grey 2px solid;

    &:hover {
      background: $primary-color;
      color: $black;
    }
  }

  .contact-icon {
    display: inline-block;
    background: #333333;
  }

  .text {
    display: inline-block;
    margin-left: 1.5rem;
    font-size: 2rem;
  }
}

.contact-info-container {
  max-width: 40rem;
  margin: 0 auto;
}

// Adapted from WET's Bootstrap based alerts
// https://wet-boew.github.io/v4.0-ci/demos/collapsible-alerts/collapsible-alerts-en.html
.info-alert {
  background: #d7faff;
  border-left: 4px solid #269abc;
  padding: 2.2rem 2.5rem;
  margin-bottom: 2.75rem;

  p:last-child {
    margin-bottom: 0;
  }
  a,
  a:link {
    color: #245269;
  }
}

///// TEAM LISTING
.heading {
  padding: 2.5rem;
  background-color: $team-purple;
  margin-bottom: 2rem;
  color: white;
}
.team-listing {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
  margin-bottom: 4rem;

  @include tablet {
  }

  &.exec {
    padding-bottom: 5rem;
    margin-bottom: 2rem;
  }

  .team-member {
    position: relative;
    border-bottom: $team-purple 4px solid;
    box-shadow: rgb(225, 228, 231) 0px -1px 4px;
    background-color: $medium-grey;
    padding: 2.5rem 0 0;
    margin-bottom: 2rem;
    @include desktop {
      height: 482px;
    }

    @include tablet {
      padding: 3.5rem 0 0;
    }
  }

  .photo-container img {
    display: block;
    margin: 0rem auto 1.5rem auto;
    height: 15rem;
    width: 15rem;
    border: $black 3px solid;
    background-size: cover;
    border-radius: 50%;

    @include tablet {
      height: 15rem;
      width: 15rem;
      border-width: 4px;
    }
  }

  .name,
  .title,
  .social-links {
    display: block;
    position: relative;
  }

  .contact-info-social {
    padding-top: 1rem;
  }

  .name {
    font-size: 2.35rem;
    font-weight: 600;
  }

  .title {
    font-size: 1.7rem;
    color: #4c4c4c;
  }

  .social-icons a {
    display: inline-flex;
    justify-content: center;
    font-size: 2.2rem;
    padding: 1.5rem 1.5rem;

    @include mobile_only {
      margin-bottom: 5rem;
    }

    @include tablet {
      margin-bottom: 5rem;
    }

    @media (max-width: 1265px) {
      padding: 1.45rem 1.45rem;
    }

    &:hover {
      background: $primary-color;
    }
  }
}

.icon-list {
  margin: 0;
  padding: 0;
  list-style: none;

  @include desktop {
    margin: 1rem 5rem;
  }

  .item {
    position: relative;
    margin: 5rem 1rem;

    @include tablet {
      border: 0;
    }

    @include desktop {
      margin: 7rem 1rem;
    }
  }

  .item-text {
    display: block;
    padding: 7.5rem 1.5rem 1.5rem 1.5rem;

    @include tablet {
      padding: 0 0 0 11rem;
    }

    @include desktop {
      padding: 0 0 0 12rem;
    }
  }

  .item-icon {
    position: absolute;
    top: -4rem;
    left: 50%;
    transform: translateX(-50%);
    background: $bg-color;
    border: $primary-color 4px solid;
    border-radius: 100%;
    min-width: 10rem;
    min-height: 10rem;

    @include tablet {
      left: 0;
      transform: none;
      top: -2.5rem;
      background: none;
      border: $primary-color 4px solid;
    }

    @include desktop {
      top: -3rem;
    }

    i {
      font-size: 3.5rem;
      padding: 2.7rem;
    }
  }

  h3 {
    margin: 0;
    text-align: center;
    font-size: 2.5rem;
    margin-bottom: 1.5rem;

    @include tablet {
      text-align: left;
      font-size: 3rem;
    }

    @include desktop {
      font-size: 3.5rem;
    }
  }
}

// Blogpost page
.page-blogpost {
  h1 {
    font-size: 4.6rem;
    font-weight: 100;
    margin-top: 0;
    margin-top: 1.5rem;
    color: $black;
    margin-left: 0;
    margin-right: 0;
    padding-left: 0;
  }

  h2 {
    font-size: 3rem;
    line-height: 4.25rem;
  }
  h3 {
    line-height: 3.25rem;
    font-weight: 400;
    font-size: 2.5rem;
  }

  .header-translation {
    font-size: 1.75rem;
    font-weight: 100;
    line-height: 2.25rem;
    padding-top: 2rem;
    padding-bottom: 2rem;

    @include desktop {
      margin-top: -6rem;
      padding-bottom: 6rem;
    }
  }

  .translation-caption {
    font-size: 1.5rem;
    clear: both;
    line-height: 2.5rem;
  }

  .blogpost-pretitle {
    font-size: 2rem;
    position: relative;

    a {
      text-decoration: none;
      color: $black;
      font-weight: 100;
    }
  }

  .post-meta {
    margin: 2.5rem 0;
    padding-bottom: 10px;
    position: relative;
    display: block;
    border-bottom: 1.5px solid $medium-grey;
  }

  time {
    font-size: 2rem;
    font-weight: 100 !important;
  }

  p {
    margin-bottom: 2.75rem;
    line-height: 1.6em;

    @include desktop {
      font-size: 2.25rem;
    }
  }

  // Single blog page navigation
  .previous-next-nav {
    background: $primary-color;
    padding: 35px 0;

    .fa-arrow-circle-left {
      margin-right: 10px;
    }

    .fa-arrow-circle-right {
      margin-left: 10px;
    }
  }

  .nav-post-title {
    font-weight: 100;
    text-decoration: none;
    margin-top: 0;
    max-width: 500px;
  }

  .nav-post-title-left {
    margin-left: 35px;
  }

  .nav-post-title-right {
    margin-right: 35px;
  }
}

.meet-us-container {
  width: 80%;
  justify-content: space-between;
  margin: 0 auto;

  .text-margin {
    width: 70%;
  }
  p {
    @include desktop {
      width: 70%;
    }
  }
}

.meet-the-team-heading {
  font-size: 45px;
  margin-bottom: 4rem;
}

.job-postings-container {
  width: 65%;
  margin-left: 2.5rem;

  .padding {
    padding: 3rem 0;

    @include mobile_only {
      padding: 3rem 0;
    }
  }
  h1,
  h2 {
    color: black;
    margin-bottom: 3rem;
  }
  a {
    color: $alpha-color;
  }
  .cds-title {
    color: #6b3c18;
    font-size: 45px;
  }
  .content {
    margin-top: 3rem;
    li::marker {
      color: $career-brown;
    }

    ul {
      list-style-type: square;
    }
  }
  .h2-font-weight {
    font-weight: 600;
  }
}
.hiring-process {
  background-color: $medium-grey;

  h2 {
    margin-top: 4rem;
  }

  a {
    text-decoration: none;
    color: white;
  }
  .button-box {
    background-color: black;
  }
}

